[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/bosses/bat.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/bosses/batton/bat.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 4, 3, 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "flap"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 2 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="bat" type="KinematicBody2D" groups=[
"enemies",
]]
pause_mode = 1
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 5

[node name="anim" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 1 )
anims/flap = SubResource( 2 )

[node name="bat_hitbox" type="Area2D" parent="." groups=[
"bats",
]]
collision_layer = 33
collision_mask = 4

[node name="box" type="CollisionShape2D" parent="bat_hitbox"]
shape = SubResource( 3 )
[connection signal="animation_finished" from="anim" to="." method="_on_anim_finished"]
[connection signal="body_entered" from="bat_hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="bat_hitbox" to="." method="_on_hitbox_body_exited"]
